--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -57,4 +57,14 @@
         android:layout_marginTop="31dp"
         android:textSize="18sp" />
 
+    <Button
+        android:id="@+id/myDeleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/detailButton"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="12dp"
+        android:onClick="deleteButtonClick"
+        android:text="Archive" />
+
 </RelativeLayout>
