--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.example.szilv.listexample.MainActivity">
 
-    <TextView
-        android:id="@+id/databaseText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <VideoView
+        android:id="@+id/myVideoView"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:foregroundGravity="center" />
 
     <ListView
         android:id="@+id/myListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/myVideoView">
 
     </ListView>
 
