--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,23 @@
         android:layout_alignParentTop="true"
         android:foregroundGravity="center" />
 
+    <TextView
+        android:id="@+id/ingredientText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/myVideoView"
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        android:text="Ingredients"
+        android:textSize="24sp" />
+
     <ListView
         android:id="@+id/myListView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/myVideoView">
+        android:layout_below="@+id/ingredientText">
 
     </ListView>
 
